update｜全体｜asideを2カラム、articleを1カラムに→htmlのclass名を調整

--- a/about/index.html
+++ b/about/index.html
@@ -63,36 +63,36 @@
     <aside class="flex aside">
       <div class="aside__area-wrapper">
         <!-- product-link-box / start -->
-        <ul class="product-link-box offset-3 col-8">
-          <h2 class="product-link-box__area-title">花澤明春園の盆栽</h2>
-          <div class="product-link-box__wrapper">
-            <li class="product-link-box__list-wrapper">
-              <a class="product-link-box__link-wrapper" href="#">
-                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
-                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+        <ul class="product-link-box--aside offset-3 col-8">
+          <h2 class="product-link-box--aside__area-title">花澤明春園の盆栽</h2>
+          <div class="product-link-box--aside__wrapper">
+            <li class="product-link-box--aside__list-wrapper">
+              <a class="product-link-box--aside__link-wrapper" href="#">
+                <img class="product-link-box--aside__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
               </a>
-                <p class="product-link-box__product-price">売却済み</p>
+                <p class="product-link-box--aside__product-price">売却済み</p>
             </li>
-            <li class="product-link-box__list-wrapper">
-              <a class="product-link-box__link-wrapper" href="#">
-                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
-                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            <li class="product-link-box--aside__list-wrapper">
+              <a class="product-link-box--aside__link-wrapper" href="#">
+                <img class="product-link-box--aside__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
               </a>
-                <p class="product-link-box__product-price">売却済み</p>
+                <p class="product-link-box--aside__product-price">売却済み</p>
             </li>
-            <li class="product-link-box__list-wrapper">
-              <a class="product-link-box__link-wrapper" href="#">
-                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
-                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            <li class="product-link-box--aside__list-wrapper">
+              <a class="product-link-box--aside__link-wrapper" href="#">
+                <img class="product-link-box--aside__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
               </a>
-                <p class="product-link-box__product-price">売却済み</p>
+                <p class="product-link-box--aside__product-price">売却済み</p>
             </li>
-            <li class="product-link-box__list-wrapper">
-              <a class="product-link-box__link-wrapper" href="#">
-                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
-                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            <li class="product-link-box--aside__list-wrapper">
+              <a class="product-link-box--aside__link-wrapper" href="#">
+                <img class="product-link-box--aside__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
               </a>
-                <p class="product-link-box__product-price">売却済み</p>
+                <p class="product-link-box--aside__product-price">売却済み</p>
             </li>
           </div>
         </ul>
