--- a/bonsai-and-people/xxxxx.html
+++ b/bonsai-and-people/xxxxx.html
@@ -160,50 +160,50 @@
     <aside class="flex aside">
       <div class="aside__area-wrapper">
         <!-- people-link-box / start -->
-        <ul class="people-link-box offset-3 col-8">
-          <h2 class="people-link-box__area-title">関連記事</h2>
-          <div class="people-link-box__wrapper">
-            <li class="people-link-box__list-wrapper">
-              <a class="people-link-box__link-wrapper" href="#">
-                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
-                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+        <ul class="people-link-box--aside offset-3 col-8">
+          <h2 class="people-link-box--aside__area-title">関連記事</h2>
+          <div class="people-link-box--aside__wrapper">
+            <li class="people-link-box--aside__list-wrapper">
+              <a class="people-link-box--aside__link-wrapper" href="#">
+                <img class="people-link-box--aside__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
             </li>
-            <li class="people-link-box__list-wrapper">
-              <a class="people-link-box__link-wrapper" href="#">
-                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
-                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            <li class="people-link-box--aside__list-wrapper">
+              <a class="people-link-box--aside__link-wrapper" href="#">
+                <img class="people-link-box--aside__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
             </li>
-            <li class="people-link-box__list-wrapper">
-              <a class="people-link-box__link-wrapper" href="#">
-                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
-                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            <li class="people-link-box--aside__list-wrapper">
+              <a class="people-link-box--aside__link-wrapper" href="#">
+                <img class="people-link-box--aside__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
             </li>
-            <li class="people-link-box__list-wrapper">
-              <a class="people-link-box__link-wrapper" href="#">
-                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
-                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            <li class="people-link-box--aside__list-wrapper">
+              <a class="people-link-box--aside__link-wrapper" href="#">
+                <img class="people-link-box--aside__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
             </li>
-            <li class="people-link-box__list-wrapper">
-              <a class="people-link-box__link-wrapper" href="#">
-                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
-                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            <li class="people-link-box--aside__list-wrapper">
+              <a class="people-link-box--aside__link-wrapper" href="#">
+                <img class="people-link-box--aside__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
             </li>
-            <li class="people-link-box__list-wrapper">
-              <a class="people-link-box__link-wrapper" href="#">
-                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
-                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            <li class="people-link-box--aside__list-wrapper">
+              <a class="people-link-box--aside__link-wrapper" href="#">
+                <img class="people-link-box--aside__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
             </li>
           </div>
         </ul>
@@ -211,36 +211,36 @@
       <div class="aside__area-wrapper">
       </div>
         <!-- product-link-box / start -->
-        <ul class="product-link-box offset-3 col-8">
-          <h2 class="product-link-box__area-title">花澤明春園の盆栽</h2>
-          <div class="product-link-box__wrapper">
-            <li class="product-link-box__list-wrapper">
-              <a class="product-link-box__link-wrapper" href="#">
-                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
-                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+        <ul class="product-link-box--aside offset-3 col-8">
+          <h2 class="product-link-box--aside__area-title">花澤明春園の盆栽</h2>
+          <div class="product-link-box--aside__wrapper">
+            <li class="product-link-box--aside__list-wrapper">
+              <a class="product-link-box--aside__link-wrapper" href="#">
+                <img class="product-link-box--aside__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
               </a>
-                <p class="product-link-box__product-price">売却済み</p>
+                <p class="product-link-box--aside__product-price">売却済み</p>
             </li>
-            <li class="product-link-box__list-wrapper">
-              <a class="product-link-box__link-wrapper" href="#">
-                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
-                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            <li class="product-link-box--aside__list-wrapper">
+              <a class="product-link-box--aside__link-wrapper" href="#">
+                <img class="product-link-box--aside__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
               </a>
-                <p class="product-link-box__product-price">売却済み</p>
+                <p class="product-link-box--aside__product-price">売却済み</p>
             </li>
-            <li class="product-link-box__list-wrapper">
-              <a class="product-link-box__link-wrapper" href="#">
-                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
-                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            <li class="product-link-box--aside__list-wrapper">
+              <a class="product-link-box--aside__link-wrapper" href="#">
+                <img class="product-link-box--aside__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
               </a>
-                <p class="product-link-box__product-price">売却済み</p>
+                <p class="product-link-box--aside__product-price">売却済み</p>
             </li>
-            <li class="product-link-box__list-wrapper">
-              <a class="product-link-box__link-wrapper" href="#">
-                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
-                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            <li class="product-link-box--aside__list-wrapper">
+              <a class="product-link-box--aside__link-wrapper" href="#">
+                <img class="product-link-box--aside__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box--aside__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
               </a>
-                <p class="product-link-box__product-price">売却済み</p>
+                <p class="product-link-box--aside__product-price">売却済み</p>
             </li>
           </div>
         </ul>
