update｜html｜ページ下部の関連リンクを整理

--- a/bonsai-and-people/index.html
+++ b/bonsai-and-people/index.html
@@ -97,7 +97,7 @@
       <div class="aside__area-wrapper">
         <!-- product-link-box / start -->
         <ul class="product-link-box--aside offset-3 col-8">
-          <h2 class="product-link-box--aside__area-title">花澤明春園の盆栽</h2>
+          <h2 class="product-link-box--aside__area-title">おすすめの盆栽</h2>
           <div class="product-link-box--aside__wrapper">
             <li class="product-link-box--aside__list-wrapper">
               <a class="product-link-box--aside__link-wrapper" href="#">
