--- a/components.html
+++ b/components.html
@@ -92,7 +92,9 @@
           <div class="pickup-title__title-inner">
             <h1 class="pickup-title__article-title">瀬戸内の気候と人の手でつくる<br class="pickup-title__br--pc">四代目の盆栽</h1>
             <p class="pickup-title__garden-name">花澤明春園／花澤 太郎</p>
-            <p class="pickup-title__garden-name">viewmore</p>
+            <div class="btn">
+              <p class="btn__pickup-title"><a href="#">viewmore</a></p>
+            </div>
           </div>
         </div>
         <figure class="pickup-title__images-wrapper">
