fix｜garden-link-box｜電話番号を削除

--- a/components.html
+++ b/components.html
@@ -92,8 +92,8 @@
           <div class="pickup-title__title-inner">
             <h1 class="pickup-title__article-title">瀬戸内の気候と人の手でつくる<br class="pickup-title__br--pc">四代目の盆栽</h1>
             <p class="pickup-title__garden-name">花澤明春園／花澤 太郎</p>
-            <div class="btn">
-              <p class="btn__pickup-title"><a href="#">viewmore</a></p>
+            <div class="primary-btn">
+              <p class="primary-btn__pickup-title"><a href="#">viewmore</a></p>
             </div>
           </div>
         </div>
