add｜article-garden-link｜新しく追加

--- a/components.html
+++ b/components.html
@@ -165,6 +165,14 @@
         </div>
       </div>
       <!-- article-message / end -->
+      <!-- article-garden-link / start -->
+      <div class="article-garden-link offset-4 col-6">
+        <div class="article-garden-link__box">
+          <img class="article-garden-link__garden-images" src="https://placehold.jp/430x269.png">
+          <p class="article-garden-link__garden-name"><a href="#">花澤明春園の紹介ページへ</a></p>
+        </div>
+      </div>
+      <!-- article-garden-link / end -->
       <!-- article-quote / start -->
       <blockquote class="article-quote offset-4 col-6">
         <div class="article-quote__wrapper">
