--- a/bonsai-and-people/xxxxx.html
+++ b/bonsai-and-people/xxxxx.html
@@ -156,59 +156,16 @@
       <!-- article-text / start -->
       <p class="article-text offset-4 col-6">取材・文／川村望（あひる社）　撮影／井上美野</p>
       <!-- article-text / end -->
+      <!-- article-garden-link / start -->
+      <div class="article-garden-link offset-4 col-6">
+        <div class="article-garden-link__box">
+          <img class="article-garden-link__garden-images" src="https://placehold.jp/430x269.png">
+          <p class="article-garden-link__garden-name"><a href="#">花澤明春園の紹介ページへ</a></p>
+        </div>
+      </div>
+      <!-- article-garden-link / end -->
     </article>
     <aside class="flex aside">
-      <div class="aside__area-wrapper">
-        <!-- people-link-box--aside / start -->
-        <ul class="people-link-box--aside offset-3 col-8">
-          <h2 class="people-link-box__area-title">花澤明春園</h2>
-          <div class="people-link-box--aside__wrapper">
-            <li class="people-link-box--aside__list-wrapper">
-              <a class="people-link-box--aside__link-wrapper" href="#">
-                <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
-                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-              </a>
-              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
-            </li>
-            <li class="people-link-box--aside__list-wrapper">
-              <a class="people-link-box--aside__link-wrapper" href="#">
-                <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
-                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-              </a>
-              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
-            </li>
-            <li class="people-link-box--aside__list-wrapper">
-              <a class="people-link-box--aside__link-wrapper" href="#">
-                <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
-                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-              </a>
-              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
-            </li>
-            <li class="people-link-box--aside__list-wrapper">
-              <a class="people-link-box--aside__link-wrapper" href="#">
-                <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
-                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-              </a>
-              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
-            </li>
-            <li class="people-link-box--aside__list-wrapper">
-              <a class="people-link-box--aside__link-wrapper" href="#">
-                <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
-                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-              </a>
-              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
-            </li>
-            <li class="people-link-box--aside__list-wrapper">
-              <a class="people-link-box--aside__link-wrapper" href="#">
-                <img class="people-link-box--aside__article-images" src="https://placehold.jp/430x269.png">
-                <h2 class="people-link-box--aside__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-              </a>
-              <div class="people-link-box--aside__garden-name">花澤明春園／花澤 太郎</div>
-            </li>
-          </div>
-        </ul>
-        <!-- people-link-box--aside / end -->
-      </div>
       <div class="aside__area-wrapper">
         <!-- product-link-box / start -->
         <ul class="product-link-box--aside offset-3 col-8">
@@ -249,7 +206,7 @@
       <div class="aside__area-wrapper">
         <!-- people-link-box--aside / start -->
         <ul class="people-link-box--aside offset-3 col-8">
-          <h2 class="people-link-box__area-title">関連記事</h2>
+          <h2 class="people-link-box__area-title">盆栽と人</h2>
           <div class="people-link-box--aside__wrapper">
             <li class="people-link-box--aside__list-wrapper">
               <a class="people-link-box--aside__link-wrapper" href="#">
