update｜button｜戻るボタンを追加

--- a/components.html
+++ b/components.html
@@ -173,6 +173,11 @@
         </div>
       </div>
       <!-- article-garden-link / end -->
+      <!-- article-garden-link / start -->
+      <div class="secondary-btn offset-4 col-6">
+        <p class="secondary-btn__text"><a href="#">一覧ページへ戻る</a></p>
+      </div>
+      <!-- article-garden-link / end -->
       <!-- article-quote / start -->
       <blockquote class="article-quote offset-4 col-6">
         <div class="article-quote__wrapper">
