--- a/knowledge/xxxxx.html
+++ b/knowledge/xxxxx.html
@@ -55,6 +55,11 @@
       <!-- article-text / start -->
       <p class="article-text offset-4 col-6">ゆく河の流れは絶えずして、しかももとの水にあらず。淀みに浮かぶうたかたは、かつ消えかつ結びて、久しくとどまりたるためしなし。世の中にある人とすみかと、またかくのごとし。 たましきの都のうちに、棟を並べ、甍を争へる、高き、卑しき、人のすまひは、世々を経て尽きせぬものなれど、これをまことかと尋ぬれば、昔ありし家はまれなり。</p>
       <!-- article-text / end -->
+      <!-- article-garden-link / start -->
+      <div class="secondary-btn offset-4 col-6">
+        <p class="secondary-btn__text"><a href="#">一覧ページへ戻る</a></p>
+      </div>
+      <!-- article-garden-link / end -->
     </article>
     <aside class="flex aside">
       <div class="aside__area-wrapper">
