add｜components-js｜jsを追加

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <li style="margin-bottom: 20px;"><a href="./about/index.html">BONについて</a></li>
     <li style="margin-bottom: 20px;">お知らせ</li>
     <li style="margin-bottom: 20px;">お知らせ＞詳細</li>
+    <li style="margin-bottom: 20px;"><a href="./components-js.html">component一覧（js追加版）</a></li>
   </ul>
 </body>
 </html>
