fix｜html｜SNS用のmetaタグを追加

--- a/components.html
+++ b/components.html
@@ -20,10 +20,12 @@
     	</label>
     	<label class="drawer__overlay" for="drawerCheckbox"></label>
     	<nav class="drawer__menu">
-    		<ul>
-    			<li class="drawer__item"><a class="drawer__item-inner" href="/">メニュー</a></li>
-    			<li class="drawer__item"><a class="drawer__item-inner" href="/">メニュー</a></li>
-    			<li class="drawer__item"><a class="drawer__item-inner" href="/">メニュー</a></li>
+    		<ul class="drawer__item-wrapper">
+    			<li class="drawer__item"><a class="drawer__item-inner" href="/">TOP</a></li>
+    			<li class="drawer__item"><a class="drawer__item-inner" href="/">商品一覧</a></li>
+    			<li class="drawer__item"><a class="drawer__item-inner" href="/">盆栽と人</a></li>
+          <li class="drawer__item"><a class="drawer__item-inner" href="/">盆栽のこと</a></li>
+    			<li class="drawer__item"><a class="drawer__item-inner" href="/">BONについて</a></li>
     		</ul>
     	</nav>
     </div>
