--- a/components-js.html
+++ b/components-js.html
@@ -585,10 +585,10 @@
       </div>
       <!-- contents-link-box / end -->
     </aside>
-    <div class="breadcrumbs fade-in">
+    <div class="breadcrumbs">
       <p class="breadcrumbs__text"><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん</p>
     </div>
-    <footer class="footer fade-in">
+    <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_youtube.svg" src="#"></a>
         <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_insta.svg" src="#"></a>
