--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Sample</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <meta name="keywords" content="">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
