--- a/bonsai-garden/xxxxx.html
+++ b/bonsai-garden/xxxxx.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>北谷養盛園｜BON</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="keywords" content="">
+    <meta property="og:url" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="">
+    <meta property="og:image" content="">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="">
+    <meta name="twitter:title" content="">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="">
     <link rel="stylesheet" href="../dist/css/main.min.css">
 </head>
 <body class="body-wrapper">
