fix｜html｜hタグのレベルが順番通りではないエ構文エラーを修正

--- a/components.html
+++ b/components.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Component一覧｜BON</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta property="og:url" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="">
+    <meta property="og:image" content="">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="">
+    <meta name="twitter:title" content="">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="">
     <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
 <body class="body-wrapper">
@@ -64,13 +79,13 @@
       -->
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
-        <h2 class="detail-title__category-title">香川県の盆栽園</h2>
+        <p class="detail-title__category-title">香川県の盆栽園</p>
         <h1 class="detail-title__heading">北谷養盛園</h1>
       </div>
       <!-- detail-title / end -->
       <!-- people-title / start -->
       <div class="people-title offset-3 col-9">
-        <h2 class="people-title__category-title">香川県の盆栽園</h2>
+        <p class="people-title__category-title">香川県の盆栽園</p>
       </div>
       <div class="people-title__box offset-3 col-8">
         <div class="people-title__title-wrapper">
@@ -87,7 +102,7 @@
       <!-- people-title / end -->
       <!-- pickup-title / start -->
       <div class="pickup-title offset-3 col-9">
-        <h2 class="pickup-title__category-title">香川県の盆栽園</h2>
+        <p class="pickup-title__category-title">香川県の盆栽園</p>
       </div>
       <div class="pickup-title__box offset-3 col-10">
         <div class="pickup-title__title-wrapper">
