--- a/glossary/xxxxx.html
+++ b/glossary/xxxxx.html
@@ -53,7 +53,7 @@
     <article class="contents__article-wrapper flex">
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
-        <h2 class="detail-title__category-title">盆栽用語辞典</h2>
+        <p class="detail-title__category-title">盆栽用語辞典</p>
         <h1 class="detail-title__heading">用語名が入ります</h1>
       </div>
       <!-- detail-title / end -->
