--- a/knowledge/xxxxx.html
+++ b/knowledge/xxxxx.html
@@ -53,7 +53,7 @@
     <article class="contents__article-wrapper flex">
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
-        <h2 class="detail-title__category-title">盆栽の基礎知識</h2>
+        <p class="detail-title__category-title">盆栽の基礎知識</p>
         <h1 class="detail-title__heading">初めての盆栽</h1>
       </div>
       <!-- detail-title / end -->
