--- a/bonsai-and-people/xxxxx.html
+++ b/bonsai-and-people/xxxxx.html
@@ -53,7 +53,7 @@
     <article class="contents__article-wrapper flex">
       <!-- people-title / start -->
       <div class="people-title offset-3 col-9">
-        <h2 class="people-title__category-title">盆栽と人</h2>
+        <p class="people-title__category-title">盆栽と人</p>
       </div>
       <div class="people-title__box offset-3 col-8">
         <div class="people-title__title-wrapper">
