--- a/bonsai-garden/xxxxx.html
+++ b/bonsai-garden/xxxxx.html
@@ -53,7 +53,7 @@
     <article class="contents__article-wrapper flex">
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
-        <h2 class="detail-title__category-title">香川県の盆栽園</h2>
+        <p class="detail-title__category-title">香川県の盆栽園</p>
         <h1 class="detail-title__heading">北谷養盛園</h1>
       </div>
       <!-- detail-title / end -->
