--- a/components-js.html
+++ b/components-js.html
@@ -60,13 +60,13 @@
       <!-- index-title / end -->
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
-        <h2 class="detail-title__category-title">香川県の盆栽園</h2>
+        <p class="detail-title__category-title">香川県の盆栽園</p>
         <h1 class="detail-title__heading">北谷養盛園</h1>
       </div>
       <!-- detail-title / end -->
       <!-- people-title / start -->
       <div class="people-title offset-3 col-9">
-        <h2 class="people-title__category-title">香川県の盆栽園</h2>
+        <p class="people-title__category-title">香川県の盆栽園</p>
       </div>
       <div class="people-title__box offset-3 col-8">
         <div class="people-title__title-wrapper">
@@ -83,7 +83,7 @@
       <!-- people-title / end -->
       <!-- pickup-title / start -->
       <div class="pickup-title offset-3 col-9">
-        <h2 class="pickup-title__category-title">香川県の盆栽園</h2>
+        <p class="pickup-title__category-title">香川県の盆栽園</p>
       </div>
       <div class="pickup-title__box offset-3 col-10">
         <div class="pickup-title__title-wrapper">
