--- a/how-to/tree-type/index.html
+++ b/how-to/tree-type/index.html
@@ -53,7 +53,7 @@
     <article class="contents__article-wrapper flex">
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
-        <h2 class="detail-title__category-title">盆栽の育て方</h2>
+        <p class="detail-title__category-title">盆栽の育て方</p>
         <h1 class="detail-title__heading">樹種別の手入れ、育て方</h1>
       </div>
       <!-- detail-title / end -->
