fix｜bonsai-garden｜項目をthに修正

--- a/components-js.html
+++ b/components-js.html
@@ -190,23 +190,23 @@
       <!-- row-table / start -->
       <table class="row-table offset-4 col-6">
         <tr class="row-table__tr fade-in">
-          <td class="row-table__td--heading">園号</td>
+          <th class="row-table__th">園号</th>
           <td class="row-table__td">花澤明春園</td>
         </tr>
         <tr class="row-table__tr fade-in">
-          <td class="row-table__td--heading">住所</td>
+          <th class="row-table__th">住所</th>
           <td class="row-table__td"><a href="#">香川県高松市鬼無町鬼無748-3</a>（JR鬼無駅より車で3分）　※無料駐車場完備</td>
         </tr>
         <tr class="row-table__tr fade-in">
-          <td class="row-table__td--heading">電話番号</td>
+          <th class="row-table__th">電話番号</th>
           <td class="row-table__td">087-881-2847</td>
         </tr>
         <tr class="row-table__tr fade-in">
-          <td class="row-table__td--heading">URL</td>
+          <th class="row-table__th">URL</th>
           <td class="row-table__td"><a href="#">http://www.hanazawa-bonsai.com/</a></td>
         </tr>
         <tr class="row-table__tr fade-in">
-          <td class="row-table__td--heading">取扱樹種</td>
+          <th class="row-table__th">取扱樹種</th>
           <td class="row-table__td">ああああああ、ああああああ、ああああああ、ああああああ、ああああああ</td>
         </tr>
       </table>
