fix｜html｜パンくずのマークアップを修正

--- a/about/index.html
+++ b/about/index.html
@@ -218,9 +218,10 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
-    <div class="breadcrumbs">
-      <p class="breadcrumbs__text"><a href="#">TOP</a>  > 盆栽用語辞典</p>
-    </div>
+    <ol class="breadcrumbs">
+      <li class="breadcrumbs__text"><a href="#">TOP</a></li>
+      <li class="breadcrumbs__text">盆栽用語辞典</li>
+    </ol>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
