--- a/bonsai-and-people/index.html
+++ b/bonsai-and-people/index.html
@@ -200,9 +200,10 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
-    <div class="breadcrumbs">
-      <p class="breadcrumbs__text"><a href="#">TOP</a>  > 盆栽と人</p>
-    </div>
+    <ol class="breadcrumbs">
+      <li class="breadcrumbs__text"><a href="#">TOP</a></li>
+      <li class="breadcrumbs__text">盆栽と人</li>
+    </ol>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
