--- a/bonsai-garden/xxxxx.html
+++ b/bonsai-garden/xxxxx.html
@@ -236,9 +236,11 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
-    <div class="breadcrumbs">
-      <p class="breadcrumbs__text"><a href="#">TOP</a>  > <a href="#">香川県の盆栽園</a> > 北谷養盛園</p>
-    </div>
+    <ol class="breadcrumbs">
+      <li class="breadcrumbs__text"><a href="#">TOP</a></li>
+      <li class="breadcrumbs__text"><a href="#">香川県の盆栽園</a></li>
+      <li class="breadcrumbs__text">北谷養盛園</li>
+    </ol>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
