--- a/how-to/tree-type/xxxxx.html
+++ b/how-to/tree-type/xxxxx.html
@@ -219,9 +219,12 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
-    <div class="breadcrumbs">
-      <p class="breadcrumbs__text"><a href="#">TOP</a>  > <a href="#">盆栽の育て方</a> > <a href="#">樹種別の手入れ、育て方</a> > 梅盆栽の手入れ、育て方</p>
-    </div>
+    <ol class="breadcrumbs">
+      <li class="breadcrumbs__text"><a href="#">TOP</a></li>
+      <li class="breadcrumbs__text"><a href="#">盆栽の育て方</a></li>
+      <li class="breadcrumbs__text"><a href="#">樹種別の手入れ、育て方</a></li>
+      <li class="breadcrumbs__text">梅盆栽の手入れ、育て方</li>
+    </ol>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../../dist/images/common/icn_youtube.svg" src="#"></a>
