--- a/bonsai-garden/index.html
+++ b/bonsai-garden/index.html
@@ -244,9 +244,10 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
-    <div class="breadcrumbs">
-      <p class="breadcrumbs__text"><a href="#">TOP</a>  > 香川県の盆栽</p>
-    </div>
+    <ol class="breadcrumbs">
+      <li class="breadcrumbs__text"><a href="#">TOP</a></li>
+      <li class="breadcrumbs__text">香川県の盆栽</li>
+    </ol>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
