--- a/components.html
+++ b/components.html
@@ -618,9 +618,11 @@
       </div>
       <!-- contents-link-box / end -->
     </aside>
-    <div class="breadcrumbs">
-      <p class="breadcrumbs__text"><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん</p>
-    </div>
+    <ol class="breadcrumbs">
+      <li class="breadcrumbs__text"><a href="#">TOP</a></li>
+      <li class="breadcrumbs__text"><a href="#">盆栽と人</a></li>
+      <li class="breadcrumbs__text">花澤明春園／花澤登人さん</li>
+    </ol>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_youtube.svg" src="#"></a>
