--- a/knowledge/xxxxx.html
+++ b/knowledge/xxxxx.html
@@ -219,9 +219,11 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
-    <div class="breadcrumbs">
-      <p class="breadcrumbs__text"><a href="#">TOP</a>  > <a href="#">盆栽の基礎知識</a> > 初めての盆栽</p>
-    </div>
+    <ol class="breadcrumbs">
+      <li class="breadcrumbs__text"><a href="#">TOP</a></li>
+      <li class="breadcrumbs__text"><a href="#">盆栽の基礎知識</a></li>
+      <li class="breadcrumbs__text">初めての盆栽</li>
+    </ol>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
