fix｜html｜マークアップ（<main class="contents">）修正

--- a/bonsai-and-people/xxxxx.html
+++ b/bonsai-and-people/xxxxx.html
@@ -49,7 +49,7 @@
     </div>
   </header>
   <!-- article / start -->
-  <div class="contents">
+  <main class="contents">
     <article class="contents__article-wrapper flex">
       <!-- people-title / start -->
       <div class="people-title offset-3 col-9">
