--- a/components.html
+++ b/components.html
@@ -52,7 +52,7 @@
     </div>
   </header>
   <!-- article / start -->
-  <div class="contents">
+  <main class="contents">
     <article class="contents__article-wrapper flex">
       <!-- index-title / start -->
       <div class="index-title offset-3 col-8">
