--- a/how-to/tree-type/index.html
+++ b/how-to/tree-type/index.html
@@ -49,7 +49,7 @@
     </div>
   </header>
   <!-- article / start -->
-  <div class="contents">
+  <main class="contents">
     <article class="contents__article-wrapper flex">
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
