--- a/knowledge/xxxxx.html
+++ b/knowledge/xxxxx.html
@@ -49,7 +49,7 @@
     </div>
   </header>
   <!-- article / start -->
-  <div class="contents">
+  <main class="contents">
     <article class="contents__article-wrapper flex">
       <!-- detail-title / start -->
       <div class="detail-title offset-3 col-9">
