fix｜bonsai-and-people/detail.html｜画像出し分け部分をpictureに変更

--- a/bonsai-and-people/xxxxx.html
+++ b/bonsai-and-people/xxxxx.html
@@ -62,10 +62,10 @@
             <p class="people-title__garden-name">花澤明春園／花澤登人さん</p>
           </div>
         </div>
-        <figure class="people-title__images-wrapper">
+        <picture class="people-title__images-wrapper">
           <img class="people-title__images--pc" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_001-pc.png">
           <img class="people-title__images--sp" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_001-sp.png">
-        </figure>
+        </picture>
       </div>
       <!-- people-title / end -->
       <!-- article-heading / start -->
